# email-cli-tool

./: README.md  README_CN.md  pyproject.toml
.github/workflows/: test.yml
docs/superpowers/specs/: 2026-03-25-emailcli-design.md
src/emailcli/: cli.py  exceptions.py  message.py
tests/: test_cli.py  test_message.py
